--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="google" value="notranslate">
   <meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, user-scalable=no">
-  <meta name="description" content="Games for tomorrow's programmers.">
+  <meta name="description" content="Games for tomorrow's programmers.....">
   <title>ae13.tech</title>
   <link rel="stylesheet" href="common/common.css">
   <link rel="stylesheet" href="index/style.css">
